# docs/oas-1.4.0.json
@@ -2028,7 +2028,6 @@
                             "owner_group_or_role": [
                               "admin"
                             ],
-                            "inference_info_name": "/tmp/31d3d034-795b-4f82-8bab-0400199efa4c_param.json",
                             "startTime": "2024-02-05 06:05:44.377116",
                             "createTime": "2024-02-05 06:05:44.377095",
                             "image_names": [
@@ -2071,7 +2070,6 @@
                             "owner_group_or_role": [
                               "admin"
                             ],
-                            "inference_info_name": "/tmp/55cb83dc-24c0-4aec-9814-e0bea8abc5d0_param.json",
                             "startTime": "2024-02-05 06:15:26.753213",
                             "createTime": "2024-02-05 06:15:26.753195",
                             "image_names": [
@@ -2363,9 +2361,6 @@
                             "type": "string"
                           }
                         },
-                        "inference_info_name": {
-                          "type": "string"
-                        },
                         "startTime": {
                           "type": "string"
                         },
@@ -2480,7 +2475,6 @@
                       "required": [
                         "img_presigned_urls",
                         "output_presigned_urls",
-                        "inference_info_name",
                         "startTime",
                         "taskType",
                         "completeTime",
@@ -2515,7 +2509,6 @@
                         "output_presigned_urls": [
                           "https://xxxx.s3.amazonaws.com/out/9d93e241-745a-4464-bb99-22253c910a01/result/9d93e241-745a-4464-bb99-22253c910a01_param.json?AWSAccessKeyId=xxxx&Signature=sAi%2ByxVsUBdZfSh34QCMAh%2B2jGg%3D&x-amz-security-token=IQoJb3JpZ2luX2VjEOz%2F%2F%2F%2F%2F%2F%2F%2F%2F%2FwEaDmFwLXNvdXRoZWFzdC0xIkgwRgIhAJXX4Y7cAU1VjSQK3Ga5Q3oWrK9Pu7e%2BaJ%2FcP89H3DnAAiEAw%2FSIHzSWR01mAw6xb2kqhTgkapA3hRzRlmIgb%2FQuuNsq4QMItf%2F%2F%2F%2F%2F%2F%2F%2F%2F%2FARAAGgw4NjA2NjA2MDA2OTAiDI5nIbuU88AEtxiKeSq1A0em0PiCJywBO91ACgdnEOZhh46%2BcPMBZS8sbo2G7FuNR8VRz4nGIQjp4HdX468AMjoAN7tRidsufLva6L2xTrqmiiEZobRLqc%2FgsJnuxkK0FFbmdW%2B4GSjUWC8NIyICwF4KtL%2FS05fYVQyq5%2FBV%2B%2FVMw0aT5m7ai4E9FkHAgTsMvhxg31L3v%2BPe8A8Y%2BZbuWGdvonMzHE4CYMKAKe6SfvjK7u8U8YHR8IeCFWd90jzlkygIk83oFVOuyybITePaZbxWKuyEvBSJd3T7y46CeThyzc3I8AlmYTrfbuj8BhSqiptedtN5%2BmtMP5q04c3EGpIQ86B13NAUhHDadBeImztplPRLJFUXJsj7AMUHc5I7h8o%2BRXy1xE4GZD382WXsHOKLJ39UkioqRUvWCAozO%2B%2FBsILadh83RUcE7C7HFGd6%2BdnfcWPfjDOr5i%2FI5P%2BeamDL9Cvw9hakaaMSryI8ki3kmMMbubBc2JExOtspIh3SquN2dw6RUtb34mBZerxZhJHNGFsdARrboM7IZA1f8S6oGuMRX7tr67P%2Fgx5alSHiiS%2FvFlNyPqIRk7O3uAlnzLkQ7IgyMO%2FZhq4GOp0B1Fyc2ySOy88xOUvUFDkJHr5dpVYIOkffdqOgGXOi9H0edCyg8xELWZwofu6eT%2FecDv4xvjkHjXyJ%2B3H7KP1%2FmE2IoQSFJBFvI0El1rvg7jsvROTe8QVuNYG9V1PqH3zLLz%2Fw9V1R9fK6ys5ZdlDCm208LClKZq8YlxQWXlOO%2FLMLcR51FJxqu5tqXLAaVIFDNdwO%2BrUyvZx5xMTifg%3D%3D&Expires=1707195462"
                         ],
-                        "inference_info_name": "/tmp/9d93e241-745a-4464-bb99-22253c910a01_param.json",
                         "startTime": "2024-02-05 06:10:52.552528",
                         "taskType": "txt2img",
                         "completeTime": "2024-02-05 06:10:56.270528",
@@ -2970,10 +2963,6 @@
       "InferenceJob": {
         "type": "object",
         "properties": {
-          "inference_info_name": {
-            "type": "string",
-            "description": "Inference Info Name"
-          },
           "startTime": {
             "type": "string",
             "description": "Start Time"
@@ -3092,7 +3081,6 @@
           }
         },
         "required": [
-          "inference_info_name",
           "startTime",
           "taskType",
           "completeTime",
